Bug 409950 - Recovering from autosave and using [Ctrl + S] should overwrite original file (not the autosave)
Summary: Recovering from autosave and using [Ctrl + S] should overwrite original file ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.2.3
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Tiar
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-18 12:10 UTC by jimbo
Modified: 2020-05-14 13:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jimbo 2019-07-18 12:10:20 UTC
SUMMARY

When you open the 'normal' file it will tell you that an autosave file exists and would you like to open it instead. However when you go to save the now opened autosave file it will save as '.[filename].kra-autosave.kra'. You have to use 'Save As' in order to save it to a normal Krita file.

STEPS TO REPRODUCE
1. Open a file that was autosaved
2. Use [Ctrl + S] to save the file

OBSERVED RESULT
[Ctrl + S] will overwrite the hidden autosave file

EXPECTED RESULT
[Ctrl + S] should overwrite the original file

SOFTWARE/OS VERSIONS
Windows 7 Professional x64

ADDITIONAL INFORMATION

If you are using [Ctrl + S] to save the autosave file (which is kinda a temp file) shouldn't it ask you to overwrite the original file? Instead it overwrites the hidden autosave file.

Autosave is awesome but I think Krita should prompt you to save over your original file instead of the hidden autosave file. It also should also have an option to delete the autosave file for you on a successful save.
Comment 1 Tiar 2020-04-02 23:38:21 UTC
In my opinion that's a bug that Krita doesn't take the original image file from the autosave filename and don't set it up as the current filename.

Now in 4.2.9 Krita doesn't allow just saving, the user needs to confirm the Save Image dialog, but the suggested name is still in the autosave format instead of the original filename or even Untitled.kra .

I've set it to major because in my opinion it's pretty important, considering that our less technical users might not know that they should change the name and they might lose data that way.
Comment 2 Tiar 2020-05-12 14:29:30 UTC
Git commit ca4152103f1dc822fbdc9782600c7af376fc816a by Agata Cacko.
Committed on 12/05/2020 at 14:28.
Pushed by tymond into branch 'master'.

Fix autosave suggesting the autosave-formatted filename

Before this commit, if you recover an autosave for a saved file
(for example after a crash), Krita would open the autosave similarly
to how it opens other files: it would assume that the filename
that was opened is the filename to save to.
It did ask for confirmation, but beginner users might've saved it still
in the autosave-formatted filename.
This commit changes it so the autosaved file gets the filename
of the original file.
Krita still asks for confirmation even when clicked Save,
and even asks if it can overwrite the original file.

M  +5    -0    libs/ui/KisDocument.cpp

https://invent.kde.org/kde/krita/commit/ca4152103f1dc822fbdc9782600c7af376fc816a
Comment 3 Tiar 2020-05-14 13:47:48 UTC
Git commit 141714c747e752e370bcd981f1da08f64afc75a5 by Agata Cacko.
Committed on 14/05/2020 at 13:45.
Pushed by tymond into branch 'krita/4.3'.

Fix autosave suggesting the autosave-formatted filename

Before this commit, if you recover an autosave for a saved file
(for example after a crash), Krita would open the autosave similarly
to how it opens other files: it would assume that the filename
that was opened is the filename to save to.
It did ask for confirmation, but beginner users might've saved it still
in the autosave-formatted filename.
This commit changes it so the autosaved file gets the filename
of the original file.
Krita still asks for confirmation even when clicked Save,
and even asks if it can overwrite the original file.

M  +5    -0    libs/ui/KisDocument.cpp

https://invent.kde.org/kde/krita/commit/141714c747e752e370bcd981f1da08f64afc75a5